sumo/tests/sumo/extended/vaporizer/errors/id_false/errors.sumo
Error: Unknown edge referenced in a vaporizer ('xxx').
Quitting (on error).
